--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,15 @@
 
-######### CONFIGURAÇÃO DO H2 ################
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:teste
 spring.datasource.username=sa
 spring.datasource.password=
-spring.h2.console.enabled=true 
 spring.h2.console.path=/h2-console
-spring.jpa.hibernate.ddl-auto=create
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-###### usuario spring boot segurity######
+
 spring.security.user.name=admin
 spring.security.user.password=admin
 
