Altcriados endpoint get, post, classe mapper

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,12 @@ spring.h2.console.path=/h2-console
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
-spring.security.user.name=admin
-spring.security.user.password=admin
+#
+#spring.security.user.name=admin
+#spring.security.user.password=admin
+
+server.error.include-message=always
 
 
